fix reduce content / carousel gap

--- a/tarot_juicer/static/css/carousel.css
+++ b/tarot_juicer/static/css/carousel.css
@@ -6,7 +6,6 @@
 
 .carousel {
   width: var(--carousel-width);
-  margin: 20px auto;
 }
 
 .slider {
